<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/darkblue"
    tools:context="com.mobile.berp.BerpPOSMobile.ConfigActivity">

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:gravity="center">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:gravity="center"
            android:id="@+id/btnVoltar"
            android:layout_height="wrap_content"
            android:text="@string/voltar"
            android:background="@drawable/ripple_effect2"
            android:layout_margin="8dp"
            android:textColor="@color/TextButtonColor"
            android:layout_width="0dp"

            android:layout_weight="1" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:gravity="center"
        android:id="@+id/btSalvar"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:background="@drawable/ripple_effect"
        android:layout_margin="8dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textColor="@color/TextButtonColor"
        />
</LinearLayout>

    <TextView
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_ip_servidor"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtIp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:height="48dp"
        android:inputType="phone"
        android:layout_margin="8dp"
        android:digits="0123456789."
        android:labelFor="@id/edtIp"
        android:maxLength="16"
         />

    <TextView
        android:textSize="16sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_porta"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtPorta"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:height="48dp"
        android:inputType="phone"
        android:layout_margin="8dp"
        android:digits="0123456789"
        android:maxLength="8" />

    <TextView
        android:textSize="16sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_numterminal"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtTerminal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:height="48dp"
        android:inputType="phone"
        android:layout_margin="8dp"
        android:digits="0123456789"
        android:maxLength="3" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swContaComanda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:checked="false"
        android:text="@string/label_imp_pos" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swTracking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:checked="false"
        android:text="@string/habilitar_rastreamento"
        android:visibility="gone" />

    <Button
        android:id="@+id/btQrCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/ripple_effect"
        android:text="@string/btn_label_qr_code"
        android:textColor="@color/TextButtonColor" />

    <!-- Novo TextView para exibir o ID do dispositivo -->
    <TextView
        android:id="@+id/tvDeviceId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/device_id_n_a" />

</LinearLayout>