<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mobile.berp.BerpPOSMobile.ListMesasActivity">

    <!-- Barra Superior -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:padding="8dp">

        <!-- Switches -->
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchMesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_gravity="center_vertical"

            android:text="@string/switch_mesa" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchCartao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_gravity="center_vertical"
            android:text="@string/switch_cartao" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchBalcao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_gravity="center_vertical"
            android:text="@string/switch_balcao" />
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_gravity="center_vertical"
            android:text="@string/switch_Delivery" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutContadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/txtMesasCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mesas: 0"
            android:textStyle="bold"
            android:padding="4dp"
             />

        <TextView
            android:id="@+id/txtCartoesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cartões: 0"
            android:textStyle="bold"
            android:padding="4dp"
            />

        <TextView
            android:id="@+id/txtBalcoesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Balcões: 0"
            android:padding="4dp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <EditText
            android:id="@+id/editTextPesquisa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_pesquisa_atendimentos"
            android:inputType="number"
            android:maxLength="10"
            android:padding="8dp"
             />

        <ImageView
            android:id="@+id/iconClearFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_filter"
            android:contentDescription="@string/clear_filter"
            android:padding="8dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>



    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:id="@+id/pblistamesa"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/listmesas"
        android:background="@color/cardview_dark_background"/>

    <!-- Botões Inferiores -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect2"
            android:textColor="@color/TextButtonColor"
            android:text="@string/btn_voltar"/>

        <Button
            android:id="@+id/btnMostrartodos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect"
            android:textColor="@color/TextButtonColor"
            android:text="@string/btn_mostrar_todos"/>
    </LinearLayout>

</LinearLayout>