<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tVCPFCNPJCLIENTE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:textColor="@color/orang"
        android:text="CPF / CNPJ do cliente" />

    <EditText
        android:id="@+id/edtcpfcnpjcliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:paddingTop="6dp"
        android:hint="CPF / CNPJ" >
    </EditText>

    <TextView
        android:id="@+id/tVNOMECLIENTE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:textColor="@color/orang"
        android:text="@string/label_identifica_cliente" />

    <EditText
        android:id="@+id/edtnomecliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/label_identifica" />

    <Button
        android:id="@+id/btndialogContinuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/ripple_effect"
        android:textColor="@color/TextButtonColor"
        android:paddingTop="6dp"

        android:text="@string/btn_label_continuar" />
</LinearLayout>