<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/logo_para_web5"
    android:backgroundTint='@color/darkblue'
    tools:context="com.mobile.berp.BerpPOSMobile.MainActivity">

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout1"
        android:paddingTop="120dp"
        android:paddingLeft="16dp"

        android:paddingRight="16dp">

        <Button
            android:id="@+id/btIniciar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect"
            android:text="@string/iniciar"
            android:textColor="@color/TextButtonColor" />

        <Button
            android:id="@+id/btConfig"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect"
            android:text="@string/configurar"
            android:textColor="@color/TextButtonColor" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/yello"
        android:text="@string/version"
        />

    <ImageButton
        android:id="@+id/btInfo"
        android:background="@color/zxing_transparent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/contentdescriptionbtninfo"
        android:src="@mipmap/ic_info"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieProcessing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/anim6" />

</LinearLayout>